syntax = "proto3";

package playground;

import "third_party/google/api/annotations.proto";
import "third_party/protoc-gen-swagger/options/annotations.proto";

message CodeRequest {
    string body = 1;
}

message CommonRequest {
    string id = 1;
}

message FormatCodeResponse {
    string formatted_code = 1;
}

message ShareCodeResponse {
    string code = 1;
}

message RunResponse {
    string status = 1;
    string output = 2;
    string error = 3;
    double run_time = 4;
}

message GetCodeByShareResponse {
    string body = 1;
    string share_code = 2;
    string created_at = 3;
    string updated_at = 4;
}

message EmptyRequest {

}

message PingResponse {
    string message = 1;
}

service Playground {
    rpc Ping(EmptyRequest) returns (PingResponse) {
        option (google.api.http) = {
            get: "/api/playground/ping"
        };
    }
    rpc RunCode (CodeRequest) returns (RunResponse) {
        option (google.api.http) = {
            post: "/api/playground/run"
            body: "*"
        };
    }
    rpc FormatCode(CodeRequest) returns (FormatCodeResponse) {
        option (google.api.http) = {
            post: "/api/playground/format"
            body: "*"
        };
    }
    rpc ShareCode(CodeRequest) returns (ShareCodeResponse) {
        option (google.api.http) = {
            post: "/api/playground/share"
            body: "*"
        };
    }

    rpc GetCodeByShare(CommonRequest) returns (GetCodeByShareResponse) {
        option (google.api.http) = {
            get: "/api/playground/share/{id}"
        };
    }
}
